# fts

./: .env.example  .gitignore  DATABASE_MIGRATION_GUIDE.md  MIGRATION_IMPLEMENTATION_SUMMARY.md  README.md  alembic.ini  demo_multi_user_auth.py  docker-compose.yml  example.env  example_storage.env  manage_db.py  pyproject.toml  run-fenrir-app.sh  run-tests.sh  run_migration.ps1  seed_admin_user.py
.github/: app-instructions.md  copilot-instructions.md
alembic/: env.py
alembic/versions/: 001_initial_complete_schema.py  001_initial_schema.py  01d551d7392f_add_simple_tables_group_1.py  0ec36ea2a851_align_auth_users_with_model.py  14f5c85198e4_add_action_table_for_selenium_.py  202a95fe15b2_add_jwt_authentication_schema.py  21bbe2e2f4cc_add_audit_and_auth_tables.py  301ad4c5d899_add_remaining_tables.py  3346963c8a10_add_notification_preference_and_in_app_.py  41c97f44b5de_change_system_under_test_owner_user_id_.py  574c7f2077e6_remove_test_migration_field.py  (+18 more)
app/: .dockerignore  AGENT.md  Dockerfile  README.md  __init__.py  config.py  entrypoint.sh  fenrir_app.py  update_static_files.py  update_static_files.sh  utils.py
checks/: check_all_tables.py  check_auth_schema.py  check_auth_users_columns.py  check_auth_users_pk.py  check_db_state.py  check_missing_tables.py  check_tables.py  compare_schema.py
common/: app_logging.py  config.py  driver_factory.py  fenrir_enums.py  selenium_controller.py  selenium_documentation.py  utils.py  web_local_storage_manager.py  web_session_storage_manager.py
docs/: CONSOLIDATION_NOTES.md  DOMAIN_MODEL.md  FRONTEND_PLAN.md  MAILHOG_QUICK_START.md  MAILHOG_TESTING.md  OPENAPI_SCHEMA.md  TEST_REFACTORING_SUMMARY.md
frontend/: .env.development  README.md  SETUP_COMPLETE.md  TESTING.md  eslint.config.js  openapi.json  package-lock.json  package.json  tailwind.config.js  vite.config.ts
tests/: DOCKER_TESTING.md  Dockerfile  README.md  conftest.py  run-tests.sh  test_action_chain_model.py  test_association_helpers.py  test_audit_log_model.py  test_auth_dependency.py  test_auth_integration.py  test_auth_service.py  test_core_models.py  test_database_schema.py  test_entity_tag_model.py  test_multi_user_auth_service.py  test_plan_model.py  test_purge_model.py  test_token_rotation.py
(+350 files in other folders)
