[project]
name = "fenrir"
version = "0.1.0"
description = "test system for focustapps"
authors = [{ name = "FocustAppsLLC" }]
requires-python = "~=3.12"
readme = "README.md"
license = "MIT"
dependencies = [
    "selenium>=4.18.1,<5",
    "requests>=2.31.0,<3",
    "PyYAML>=6.0.1,<7",
    "pytest>=8.1.1,<9",
    "poetry-plugin-export>=1.7.1,<2",
    "pydantic>=2.6.4,<3",
    "fastapi>=0.110.0,<0.111",
    "jinja2>=3.1.3,<4",
    "uvicorn>=0.29.0,<0.30",
    "pytest-xdist>=3.5.0,<4",
    "jinja-markdown2>=0.3.0,<0.4",
    "pytest-html>=4.1.1,<5",
    "azure-identity>=1.16.0,<2",
    "azure-keyvault-secrets>=4.8.0,<5",
    "sqlalchemy>=2.0.29,<3",
    "alembic>=1.13.0,<2",
    "gunicorn>=21.2.0,<22",
    "httpx>=0.27.0,<0.28",
    "azure-cosmos>=4.6.0,<5",
    "pyodbc>=5.1.0,<6",
    "msal>=1.28.0,<2",
    "load-dotenv>=0.1.0,<0.2",
    "pillow>=10.3.0,<11",
    "pre-commit>=3.7.1,<4",
    "azure-storage-blob>=12.21.0,<13",
    "pylint>=3.2.7,<4",
    "azure-devops>=7.1.0b4,<8",
    "azure-servicebus>=7.12.3,<8",
    "aiohttp>=3.10.10,<4",
    "azure-mgmt-authorization>=4.0.0,<5",
    "python-multipart>=0.0.20,<0.0.21",
    "boto3>=1.36.16,<2",
    "psycopg2-binary>=2.9.10",
    "pytest-asyncio>=1.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=3.7.0,<4",
    "ipykernel>=6.29.4,<7",
    "smolagents[docker]>=1.17.0,<2",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.pytest.ini_options]
pythonpath = ["."]
log_cli = true
addopts = "--strict-markers"
markers = [
    "release: mark a test that will be ran for a release",
    "manual_only: mark a test that is will only be manually tested",
    "planned: mark a test that is not yet automated but is planned to be.",
    "covered_by_unit: mark a test that is covered by a unit test",
    "requires_data: tests that require data from email processing.",
    "asyncio: mark a test as an async test",
]

[tool.pylint]
disable = ["E1101"]

variable-rgx = "^[a-z_][a-z0-9_]{2,30}$"
argument-rgx = "^[a-z_][a-z0-9_]{2,30}$"
method-rgx = "^[a-z_][a-z0-9_]{2,30}$"
